; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/unbound/daemon/extr_remote.c_negative_del_kcache.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/unbound/daemon/extr_remote.c_negative_del_kcache.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lruhash_entry = type { i64 }
%struct.del_info = type { i32, i32 }
%struct.key_entry_data = type { i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.lruhash_entry*, i8*)* @negative_del_kcache to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @negative_del_kcache(%struct.lruhash_entry* %0, i8* %1) #0 {
  %3 = alloca %struct.lruhash_entry*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.del_info*, align 8
  %6 = alloca %struct.key_entry_data*, align 8
  store %struct.lruhash_entry* %0, %struct.lruhash_entry** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = bitcast i8* %7 to %struct.del_info*
  store %struct.del_info* %8, %struct.del_info** %5, align 8
  %9 = load %struct.lruhash_entry*, %struct.lruhash_entry** %3, align 8
  %10 = getelementptr inbounds %struct.lruhash_entry, %struct.lruhash_entry* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = inttoptr i64 %11 to %struct.key_entry_data*
  store %struct.key_entry_data* %12, %struct.key_entry_data** %6, align 8
  %13 = load %struct.key_entry_data*, %struct.key_entry_data** %6, align 8
  %14 = getelementptr inbounds %struct.key_entry_data, %struct.key_entry_data* %13, i32 0, i32 1
  %15 = load i64, i64* %14, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %27

17:                                               ; preds = %2
  %18 = load %struct.del_info*, %struct.del_info** %5, align 8
  %19 = getelementptr inbounds %struct.del_info, %struct.del_info* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = load %struct.key_entry_data*, %struct.key_entry_data** %6, align 8
  %22 = getelementptr inbounds %struct.key_entry_data, %struct.key_entry_data* %21, i32 0, i32 0
  store i32 %20, i32* %22, align 8
  %23 = load %struct.del_info*, %struct.del_info** %5, align 8
  %24 = getelementptr inbounds %struct.del_info, %struct.del_info* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = add nsw i32 %25, 1
  store i32 %26, i32* %24, align 4
  br label %27

27:                                               ; preds = %17, %2
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
